CGE-145 change method updateImages in AdvertisementService, add test, change database_init.yml, update.yml, updateAdvLocation.yml